[package]
name = "rs-binding"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.147"
ceramic-http-client = { git = "https://github.com/3box/ceramic-http-client-rs", branch = "main", version = "0.1.0" }
async-std = "1.12.0"
url = "2.4.1"
multibase = "0.9.1"
hex = "0.4.3"
ssh-key = { version = "0.6.1", features = ["ed25519"] }
tokio = { version = "1.32.0", features = ["full"] }
serde_json = "1.0.106"
anyhow = "1.0.75"
serde = "1.0.188"

[build-dependencies]
cbindgen = "0.24.5"
